--- a/telecoweb/iot/templates/iot/base.html
+++ b/telecoweb/iot/templates/iot/base.html
@@ -7,34 +7,51 @@
 
   <canvas id="myChart" width="800" height="400"></canvas>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
-  const ctx = document.getElementById('myChart').getContext('2d');
-  const myChart = new Chart(ctx, {
-      type: 'line',
-      data: {
-        labels : [{% for item in plot_list %}"{{ item.pub_date }}",{% endfor %}],
-          datasets: [{
-            label: "Temperature",
-            data : [{% for item in plot_list %}{{ item.temp_value }},{% endfor %}],
-            backgroundColor: 'rgba(75, 192, 192, 0.2)',
-            borderColor: 'rgba(75, 192, 192, 1)',
-            borderWidth: 1
-          },{
-            label: "Humidity",
-            data : [{% for item in plot_list %}{{ item.hum_value }},{% endfor %}],
-            backgroundColor: 'rgba(192, 75, 192, 0.2)',
-            borderColor: 'rgba(192, 75, 192, 1)',
-            borderWidth: 1
-          }]
-      },
-      options: {
-          scales: {
-              y: {
-                  beginAtZero: true
-              }
-          }
-      }
-  });
+    $(document).ready(function() {
+                    updateState()
+                  function updateState() {
+                    $.ajax({
+                      url: "iot/"
+                      type: 'GET'
+                    })
+                    .done(response => {
+                      const data = response
+                      const ctx = document.getElementById('myChart').getContext('2d');
+                      const myChart = new Chart(ctx, {
+                          type: 'line',
+                          data: {
+                            labels : [{% for item in plot_list %}"{{ item.pub_date }}",{% endfor %}],
+                              datasets: [{
+                                label: "Temperature",
+                                data : [{% for item in plot_list %}{{ item.temp_value }},{% endfor %}],
+                                backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                                borderColor: 'rgba(75, 192, 192, 1)',
+                                borderWidth: 1
+                              },{
+                                label: "Humidity",
+                                data : [{% for item in plot_list %}{{ item.hum_value }},{% endfor %}],
+                                backgroundColor: 'rgba(192, 75, 192, 0.2)',
+                                borderColor: 'rgba(192, 75, 192, 1)',
+                                borderWidth: 1
+                              }]
+                          },
+                          options: {
+                              scales: {
+                                  y: {
+                                      beginAtZero: true
+                                  }
+                              }
+                          }
+                      });
+                      // rerun every 10 seconds
+                      setTimeout(function() {
+                        updateState()
+                      }, 5000)
+                    })
+                  }
+                })
   </script>
 
 </body>
