--- a/telecoweb/iot/templates/iot/base.html
+++ b/telecoweb/iot/templates/iot/base.html
@@ -1,51 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>IoT</title>
-</head>
 <body>
 
-  <canvas id="myChart" width="800" height="400"></canvas>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  
-  <script>
-  const ctx = document.getElementById('myChart').getContext('2d');
-  const myChart = new Chart(ctx, {
-      type: 'line',
-      data: {
-        labels : [{% for item in plot_list %}"{{ item.pub_date }}",{% endfor %}],
-          datasets: [{
-            label: "Temperature",
-            data : [{% for item in plot_list %}{{ item.temp_value }},{% endfor %}],
-            backgroundColor: 'rgba(192, 75, 192, 0.2)',
-            borderColor: 'rgba(192, 75, 192, 1)',
-            borderWidth: 1
-          },{
-            label: "Humidity",
-            data : [{% for item in plot_list %}{{ item.hum_value }},{% endfor %}],
-            backgroundColor: 'rgba(75, 192, 192, 0.2)',
-            borderColor: 'rgba(75, 192, 192, 1)',
-            borderWidth: 1
-          }]
-      },
-      options: {
-          scales: {
-              y: {
-                  beginAtZero: true
-              }
-          }
+<div id="demo">
+  <h2>Let AJAX change this text</h2>
+  <button type="button" onclick="loadDoc()">Change Content</button>
+</div>
+
+<script>
+  function loadDoc() {
+    var xhttp = new XMLHttpRequest();
+    xhttp.onreadystatechange = function() {
+      if (this.readyState == 4 && this.status == 200) {
+      document.getElementById("demo").innerHTML = this.responseText;
       }
-  });
-  
-  function addData(chart, label, data) {
-    chart.data.labels.push(label);
-    chart.data.datasets.forEach((dataset) => {
-        dataset.data.push(data);
-    });
-    chart.update();
-}
-  </script>
+    };
+    xhttp.open("GET", "chart.html", true);
+    xhttp.send();
+  }
+</script>
 
 </body>
 </html>
--1
