update method test

--- a/telecoweb/iot/templates/iot/base.html
+++ b/telecoweb/iot/templates/iot/base.html
@@ -15,7 +15,7 @@
       document.getElementById("demo").innerHTML = this.responseText;
       }
     };
-    xhttp.open("GET", "", true);
+    xhttp.open("GET", "update", true);
     xhttp.send();
   }
 </script>
