--- a/telecoweb/iot/templates/iot/test.html
+++ b/telecoweb/iot/templates/iot/test.html
@@ -11,7 +11,7 @@
 
 <canvas id="myChart" width="800" height="400"></canvas>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
+<script>
   // used for example purposes
 function getRandomIntInclusive(min, max) {
   min = Math.ceil(min);
