--- a/telecoweb/iot/templates/iot/test.html
+++ b/telecoweb/iot/templates/iot/test.html
@@ -4,76 +4,49 @@
 <title>IoT</title>
 </head>
 <body>
-
-<div style="width:50%;">
-    <canvas id="mycanvas"></canvas>
-</div>
-
-<canvas id="myChart" width="800" height="400"></canvas>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-  // used for example purposes
-function getRandomIntInclusive(min, max) {
-  min = Math.ceil(min);
-  max = Math.floor(max);
-  return Math.floor(Math.random() * (max - min + 1)) + min;
-}
-
-// create initial empty chart
-var ctx_live = document.getElementById("mycanvas");
-var myChart = new Chart(ctx_live, {
-  type: 'bar',
-  data: {
-    labels: [],
-    datasets: [{
-      data: [],
-      borderWidth: 1,
-      borderColor:'#00c0ef',
-      label: 'liveCount',
-    }]
-  },
-  options: {
-    responsive: true,
-    title: {
-      display: true,
-      text: "Chart.js - Dynamically Update Chart Via Ajax Requests",
-    },
-    legend: {
-      display: false
-    },
-    scales: {
-      yAxes: [{
-        ticks: {
-          beginAtZero: true,
+  <button type="button" onclick="update_chart()">Get Chart</button>
+  <canvas id="myChart" width="800" height="400"></canvas>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  
+  <script>
+  const ctx = document.getElementById('myChart').getContext('2d');
+  const myChart = new Chart(ctx, {
+      type: 'line',
+      data: {
+        labels : [{% for item in plot_list %}"{{ item.pub_date }}",{% endfor %}],
+          datasets: [{
+            label: "Temperature",
+            data : [{% for item in plot_list %}{{ item.temp_value }},{% endfor %}],
+            backgroundColor: 'rgba(192, 75, 192, 0.2)',
+            borderColor: 'rgba(192, 75, 192, 1)',
+            borderWidth: 1
+          },{
+            label: "Humidity",
+            data : [{% for item in plot_list %}{{ item.hum_value }},{% endfor %}],
+            backgroundColor: 'rgba(75, 192, 192, 0.2)',
+            borderColor: 'rgba(75, 192, 192, 1)',
+            borderWidth: 1
+          }]
+      },
+      options: {
+          scales: {
+              y: {
+                  beginAtZero: true
+              }
+          }
+      }
+    });
+    function update_chart() {
+    $.ajax({
+        type: 'POST', //post method
+        url: 'iot/', //ajaxformexample url
+        dataType: "json",
+        success: function (result, textStatus, jqXHR)
+        {
+            myChart.update();
         }
-      }]
-    }
-  }
-});
-
-// this post id drives the example data
-var postId = 1;
-
-// logic to get new data
-var getData = function() {
-  $.ajax({
-    url: 'https://jsonplaceholder.typicode.com/posts/' + postId + '/comments',
-    success: function(data) {
-      // process your data to pull out what you plan to use to update the chart
-      // e.g. new label and a new data point
-      
-      // add new label and data point to chart's underlying data structures
-      myChart.data.labels.push("Post " + postId++);
-      myChart.data.datasets[0].data.push(getRandomIntInclusive(1, 25));
-      
-      // re-render the chart
-      myChart.update();
-    }
-  });
-};
-
-// get new data every 3 seconds
-setInterval(getData, 3000);
-</script>
+    });
+    };
+    </script>
 </body>
 </html>
