--- a/telecoweb/iot/templates/iot/test.html
+++ b/telecoweb/iot/templates/iot/test.html
@@ -7,7 +7,7 @@
   <button type="button" onclick="update_chart()">Get Chart</button>
   <canvas id="myChart" width="800" height="400"></canvas>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script>
   const ctx = document.getElementById('myChart').getContext('2d');
   const myChart = new Chart(ctx, {
