punto putno slash

--- a/telecoweb/iot/templates/iot/test.html
+++ b/telecoweb/iot/templates/iot/test.html
@@ -39,7 +39,7 @@
     function update_chart() {
     $.ajax({
         type: 'POST', //post method
-        url: 'iot/', //ajaxformexample url
+        url: '../', //ajaxformexample url
         dataType: "json",
         success: function (result, textStatus, jqXHR)
         {
