--- a/telecoweb/iot/templates/iot/test.html
+++ b/telecoweb/iot/templates/iot/test.html
@@ -38,7 +38,7 @@
     });
     function update_chart() {
     $.ajax({
-        type: 'POST', //post method
+        type: 'GET', //post method
         url: '../', //ajaxformexample url
         dataType: "json",
         success: function (result, textStatus, jqXHR)
