--- a/telecoweb/iot/templates/iot/test.html
+++ b/telecoweb/iot/templates/iot/test.html
@@ -43,6 +43,6 @@
       chart.update();
     };
     </script>
-    <button type="button" onclick="addData(myChart, hi, 20)">Get Chart</button>
+    <button type="button" onclick="addData(myChart, "hi", 20)">Get Chart</button>
 </body>
 </html>
