--- a/telecoweb/iot/templates/iot/test.html
+++ b/telecoweb/iot/templates/iot/test.html
@@ -56,6 +56,6 @@
       xhttp.send();
     }
     </script>
-    <button type="button" onclick="addData()">Get Chart</button>
+    <button type="button" onclick="loadDoc()">Get Chart</button>
 </body>
 </html>
